--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "social-media-downloader"
-version = "1.1.9"
+version = "1.1.10"
 description = "A command-line tool to download videos from various social media platforms like YouTube, TikTok, Facebook, Instagram, X & more. It supports instagram batch downloads, format selection, and maintains a download history."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -25,7 +25,7 @@ classifiers = [
     "Intended Audience :: End Users/Desktop",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.10",
     "Topic :: Internet",
     "Topic :: Multimedia :: Video",
     "Topic :: Software Development :: Libraries",
@@ -54,8 +54,8 @@ dev = [
 ]
 
 [project.scripts]
-smd = "smd.downloader:main"
-social-media-downloader = "smd.downloader:main"
+smd = "smd.downloader:cli"
+social-media-downloader = "smd.downloader:cli"
 
 [project.urls]
 "Source Code" = "https://github.com/nayandas69/Social-Media-Downloader"
@@ -66,4 +66,4 @@ social-media-downloader = "smd.downloader:main"
 include-package-data = true
 
 [tool.setuptools.packages.find]
-exclude = ["tests*", "docs*"]
+exclude = ["test*", "docs*"]
