--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
-      packages: write
+      contents: write  # ✅ Needed to update/create GitHub releases
+      packages: write  # ✅ Needed to push Docker images
 
     steps:
       - name: Checkout code
@@ -56,7 +56,6 @@ jobs:
           tags: |
             type=raw,value={{tag}}
             type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -64,6 +63,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
+          provenance: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -84,6 +84,11 @@ jobs:
           echo "Available tags:" >> release_notes.md
           echo "- \`${{ env.VERSION }}\`" >> release_notes.md
           echo "- \`latest\`" >> release_notes.md
+
+          # Add 'latest' only if on default branch
+          if [ "${{ github.ref_name }}" = "${{ github.event.repository.default_branch }}" ]; then
+            echo "- \`latest\`" >> release_notes.md
+          fi
 
       - name: Update release with Docker info
         if: startsWith(github.ref, 'refs/tags/')
