--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,7 @@
-pytest>=7.0
-flake8>=6.0
-black>=23.1
+pytest>=8.0.0
+pytest-cov>=4.0.0
+flake8>=7.0.0
+black>=24.0.0
+mypy>=1.8.0
+isort>=5.13.0
+pre-commit>=3.6.0
