--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-yt-dlp>=2023.7.6
-instaloader>=4.10.0
-tqdm>=4.65.0
-requests>=2.31.0
+yt-dlp>=2024.1.0
+instaloader>=4.11.0
+tqdm>=4.66.0
+requests>=2.32.0
 ffmpeg-python>=0.2.0
-certifi>=2023.7.22
-setuptools>=65.5.0
-wheel>=0.38.4
-pyfiglet>=0.8.post1
-termcolor>=2.3.0
+certifi>=2024.2.0
+setuptools>=69.0.0
+wheel>=0.42.0
+pyfiglet>=1.0.0
+termcolor>=2.4.0
 tabulate>=0.9.0
